--- a/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/themes/skin_highContrast/styles/appearance.css
+++ b/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/themes/skin_highContrast/styles/appearance.css
@@ -368,7 +368,7 @@ FORM BG			#F2F8FC
 	}
 	
 	.listBackground .ascSort, .listBackground .descSort {
-		background-color: #F2F8FC;
+		background-color: #FFFFFF;
 	}
 	
 	/*LIST ITEM*/
@@ -388,12 +388,12 @@ FORM BG			#F2F8FC
 	}
 	
 	.listBackground, .listBackground .seperator {
-		background-color: #F2F8FC;
+		background-color: #FFFFFF;
 	}
 
 /*	
 	.fullItem, .listItem:hover, .itemBlock .itemLine:hover {
-		background-color: #ffffff;
+		background-color: #FFFFFF;
 	}
 */	
 		/*ITEM HEADER*/
