--- a/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/themes/skin_classic/styles/appearance.css
+++ b/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/themes/skin_classic/styles/appearance.css
@@ -364,7 +364,7 @@ FORM BG			#FFFFFF
 	}
 	
 	.statusArea .ascSort, .statusArea .desSort, th .ascSort, th .desSort {
-		background-color: #E7E8E2;
+		background-color: #FFFFFF;
 	}
 	
 	.listBackground .ascSort, .listBackground .descSort {
