--- a/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_JavaScript/eSciDoc_component_JavaScript/DateJS/easterEggs/skin_PubWoman/styles/appearance.css
+++ b/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_JavaScript/eSciDoc_component_JavaScript/DateJS/easterEggs/skin_PubWoman/styles/appearance.css
@@ -327,7 +327,7 @@
 	}
 	
 	.statusArea .ascSort, .statusArea .desSort, th .ascSort, th .desSort {
-		background-color: #F3EDF4;
+		background-color: #FFFFFF;
 	}
 	
 	.listBackground .ascSort, .listBackground .descSort {
