--- a/pubman/pubman_presentation/src/main/webapp/home/StartPageLoggedOut.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/home/StartPageLoggedOut.jspf
@@ -59,7 +59,7 @@
 	<h2>
 	Short PubMan Introduction Video
 	</h2>
-	<a href="http://pubman.blogs.mpdl.mpg.de/2009/02/13/introduction-into-pubman-via-screencast-availabel-now/" target="_blank"><img src="./images/screencast.jpg" class="huge videoPreview"/></a>
+	<a href="http://pubman.blogs.mpdl.mpg.de/2009/02/13/introduction-into-pubman-via-screencast-availabel-now/" target="_blank"><img src="/pubman/images/screencast.jpg" class="huge videoPreview"/></a>
 	<br/><br/>
 	<h2>
 	PubMan Interfaces
@@ -100,7 +100,7 @@
 	<h2>
 	PubMan Einf&uuml;hrungsvideo
 	</h2>
-	<a href="http://pubman.blogs.mpdl.mpg.de/2009/02/13/introduction-into-pubman-via-screencast-availabel-now/" target="_blank"><img src="./images/screencast.jpg" class="huge videoPreview"/></a>
+	<a href="http://pubman.blogs.mpdl.mpg.de/2009/02/13/introduction-into-pubman-via-screencast-availabel-now/" target="_blank"><img src="/pubman/images/screencast.jpg" class="huge videoPreview"/></a>
 	<br/><br/>
 	<h2>
 	PubMan Schnittstellen
@@ -140,7 +140,7 @@
 	<h2>
 	PubMan紹介ビデオ
 	</h2>
-	<a href="http://pubman.blogs.mpdl.mpg.de/2009/02/13/introduction-into-pubman-via-screencast-availabel-now/" target="_blank"><img src="./images/screencast.jpg" class="huge videoPreview"/></a>
+	<a href="http://pubman.blogs.mpdl.mpg.de/2009/02/13/introduction-into-pubman-via-screencast-availabel-now/" target="_blank"><img src="/pubman/images/screencast.jpg" class="huge videoPreview"/></a>
 	<br/><br/>
 	<h2>
 	PubManインタフェース
