--- a/pubman/pubman_presentation/src/main/webapp/viewItem/FilesGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/FilesGroup.jspf
@@ -64,7 +64,8 @@
 					<h:outputText value="#{lbl.ViewItemMedium_lblFileDescription}"/><span class="noDisplay">: <br /></span>
 				</b>
 				<span class="xHuge_area0 xTiny_marginLExcl endline">
-						<h:outputText value="#{file.fileDescription}" rendered="#{ViewItemFull.isStateWithdrawn == false}"/>
+					<h:outputText value="#{file.fileDescription}" rendered="#{ViewItemFull.isStateWithdrawn == false}"/>
+					<h:outputText value="#{lbl.lbl_noEntry}" rendered ="#{file.fileDescription == null  || file.fileDescription == ''}"/>
 				</span>
 			</h:panelGroup>
 
@@ -97,6 +98,7 @@
 				</b>
 				<span class="xHuge_area0 xTiny_marginLExcl endline">
 					<h:outputText value="#{file.file.defaultMetadata.copyrightDate}" rendered="true"/>
+					<h:outputText value="#{lbl.lbl_noEntry}" rendered ="#{file.file.defaultMetadata.copyrightDate == null  || file.file.defaultMetadata.copyrightDate == ''}"/>
 				</span>
 			</h:panelGroup>
 
@@ -107,6 +109,7 @@
 				</b>
 				<span class="xHuge_area0 xTiny_marginLExcl endline">
 					<h:outputText value="#{file.file.defaultMetadata.rights}" rendered="true"/>
+					<h:outputText value="#{lbl.lbl_noEntry}" rendered ="#{file.file.defaultMetadata.rights == null  || file.file.defaultMetadata.rights == ''}"/>
 				</span>
 			</h:panelGroup>
  
@@ -117,6 +120,7 @@
 				</b>
 				<span class="xHuge_area0 xTiny_marginLExcl endline">
 					<h:outputText value="#{file.file.defaultMetadata.licenseDisplayString}" escape="false"/>
+					<h:outputText value="#{lbl.lbl_noEntry}" rendered ="#{file.file.defaultMetadata.licenseDisplayString == null  || file.file.defaultMetadata.licenseDisplayString == ''}"/>
 				</span>
 				<h:panelGroup styleClass="large_area0_p8 lineToolSection" rendered="#{file.urlToLicenceImage != ''}">
 					<h:graphicImage styleClass="sectionTool" url="#{file.urlToLicenceImage}" value="#{file.urlToLicenceImage}"/>
