--- a/pubman/pubman_presentation/src/main/webapp/export/ExportEmailView.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/export/ExportEmailView.jspf
@@ -40,6 +40,9 @@
 			<h:outputText value="#{lbl.ExportEmail_lblItemsAttached}" />
 		</b>
 	</span>
+	<h3 class="xLarge_area0_p8 endline blockHeader">
+		&#160;
+	</h3>
 	<div class="free_area0 itemBlockContent endline">
 		<div class="free_area0 endline itemLine noTopBorder">
 			<span class="quad_area0 xTiny_marginLExcl endline">
