changed input font according to Malte decision

--- a/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/themes/skin_highContrast/styles/appearance.css
+++ b/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/themes/skin_highContrast/styles/appearance.css
@@ -98,7 +98,7 @@ FORM BG			#F2F8FC
 			font-family: Trebuchet, "Trebuchet MS", sans-serif;
 		}
 		input[type=text], textarea {
-			font-family : "Georgia", sans-serif;
+			font-family : Courier, "Courier New", serif;
 		}
 		h1, h4, h5 {
 			font-family: "Myriad Pro Condensed", "Arial Narrow", sans-serif;
