FIXED side section break bug

--- a/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/pubman_component_css/infoPage.css
+++ b/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/pubman_component_css/infoPage.css
@@ -79,6 +79,10 @@
 	border-top-width: 0.10em !important;
 }
 
+.infoPage .sideSectionArea { 
+	width: 34em;
+}
+
 .infoPage .sideSection {
 	padding: 0px;
 	width: 31.28em;
